TEST_PROGRAMS/typing_benchmarks/invalid/undecl_type2.go
package main

type p struct {
	// t is undeclared
	x, y t
}
